tests/integration/build/errors/catch.c
/* Code generated using the Orng compiler https://ornglang.org */
#include <math.h>
#include <stdio.h>
#include <stdint.h>
#include <stdlib.h>

#include "debug.inc"

/* Function forward definitions */
int64_t _348_main(void);

/* Function definitions */
int64_t _348_main(void) {
    int64_t _348_$retval;
    _348_$retval = 118;
    return _348_$retval;
}

int main(void) {
  printf("%ld",_348_main());
  return 0;
}
